# nix-haskell-shell-scripting

./: README.md  bootstrap.sh
.github/workflows/: ci.yaml
nix/: default.nix  sources.json
shell-utils/basic/: CHANGELOG.md  LICENSE  README.md  basic.cabal  default.nix  release.nix  shell.nix
shell-utils/basic/src/: Main.hs
