cabal-version:       2.4
name:                basic
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Adrian Gierakowski
maintainer:          agierakowski@gmail.com
extra-source-files:  CHANGELOG.md, README.md

executable basic
  main-is:             src/Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base ^>=4.12.0.0, turtle ^>=1.5.15
  default-language:    Haskell2010
